# booby-strap

./: .bazelrc  MODULE.bazel  stage0-posix.BUILD.bazel
bootstrap/: BUILD.bazel  bootstrap.bzl  build_tool.bzl
bzl/: bootlin_toolchain.BUILD.bazel  bootlin_toolchain.bzl
src/: BUILD.bazel
test/: BUILD.bazel  test.cpp
toolchains/: BUILD.bazel
toolchains/cc/: BUILD.bazel
toolchains/cc/config/: BUILD.bazel  bootstrap.bzl
