module(name = "booby-strap")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

bootlin_toolchain = use_repo_rule("//bzl:bootlin_toolchain.bzl", "bootlin_toolchain")

bootlin_toolchain(
    name = "bootstrap",
    integrity = "sha256-dgrNXDFZRIthjiN7YZNTNbqtp0/gzcDXYRgmy0m0HIw=",
    strip_prefix = "x86-64--glibc--stable-2025.08-1",
    url = "https://toolchains.bootlin.com/downloads/releases/toolchains/x86-64/tarballs/x86-64--glibc--stable-2025.08-1.tar.xz",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "glibc",
    build_file_content = """\
filegroup(
    name = "files",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
    integrity = "sha256-2chsa12920Oj4IJwxYRPxRd9GUQs9bjfS+fAfNX6ODE=",
    strip_prefix = "glibc-2.43",
    url = "https://ftp.gnu.org/gnu/glibc/glibc-2.43.tar.xz",
)

http_archive(
    name = "stage0-posix",
    build_file = "stage0-posix.BUILD.bazel",
    integrity = "sha256-9P3aZ13pCrA0/TRn70PN3/YbPTcvjg5cLSXRRfIkIm8=",
    strip_prefix = "stage0-posix-1.9.1",
    url = "https://github.com/oriansj/stage0-posix/releases/download/Release_1.9.1/stage0-posix-1.9.1.tar.gz",
)

register_toolchains(
    "//toolchains:bootstrap",
    dev_dependency = True,
)
