package(default_visibility = ["//visibility:public"])

exports_files(glob(["**"]))

filegroup(
    name = "hex0.hex0",
    srcs = ["AMD64/hex0_AMD64.hex0"],
)

filegroup(
    name = "hex0-seed",
    srcs = ["bootstrap-seeds/POSIX/AMD64/hex0-seed"],
)

filegroup(
    name = "hex1.hex0",
    srcs = ["AMD64/hex1_AMD64.hex0"],
)

filegroup(
    name = "hex2.hex1",
    srcs = ["AMD64/hex2_AMD64.hex1"],
)

filegroup(
    name = "catm.hex2",
    srcs = ["AMD64/catm_AMD64.hex2"],
)

filegroup(
    name = "ELF.hex2",
    srcs = ["AMD64/ELF-amd64.hex2"],
)

filegroup(
    name = "M0.hex2",
    srcs = ["AMD64/M0_AMD64.hex2"],
)

filegroup(
    name = "cc.M1",
    srcs = ["AMD64/cc_amd64.M1"],
)
