toolchain(
    name = "bootstrap",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = "//toolchains/cc:bootstrap",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
