load("@rules_cc//cc:defs.bzl", "cc_toolchain")

filegroup(name = "empty")

cc_toolchain(
    name = "bootstrap",
    all_files = "@bootstrap//:all_files",
    compiler_files = "@bootstrap//:compiler_files",
    dwp_files = ":empty",
    linker_files = "@bootstrap//:linker_files",
    objcopy_files = ":empty",
    output_licenses = [],
    strip_files = ":empty",
    supports_header_parsing = False,  # TODO: maybe enable
    toolchain_config = "//toolchains/cc/config:bootstrap",
)
